Use 1d array for board representation

--- a/Promotinator.Tests/Promotinator.Tests.csproj
+++ b/Promotinator.Tests/Promotinator.Tests.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Promotinator.Engine\Promotinator.Engine.csproj" />
+    <ProjectReference Include="..\Source\Promotinator\Promotinator.csproj" />
   </ItemGroup>
 
   <ItemGroup>
